<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/_5sdp"
    tools:context=".townhall.ThBasicDetailsActivity">

    <TextView
        android:id="@+id/thbasic_txt_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center_horizontal"
        android:padding="@dimen/_10sdp"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="@dimen/_20sdp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:orientation="vertical">

            <!--Building Avail-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/thbasic_buildings_avail"
                    android:textColor="@color/level5"
                    android:textSize="@dimen/_14ssp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/level5"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_2sdp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/thbasic_max_building"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_12ssp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_2sdp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/thbasic_max_traps"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_12ssp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_30sdp"
                    android:background="@color/level5"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/thbasic_txt_max_building"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="@dimen/_1sdp"
                        android:layout_marginEnd="@dimen/_2sdp"
                        android:layout_marginBottom="@dimen/_1sdp"
                        android:layout_weight="1"
                        android:background="@color/white"
                        android:gravity="center"
                        android:textColor="@color/level5"
                        android:textSize="@dimen/_14ssp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/thbasic_txt_max_traps"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="@dimen/_1sdp"
                        android:layout_marginEnd="@dimen/_2sdp"
                        android:layout_marginBottom="@dimen/_1sdp"
                        android:layout_weight="1"
                        android:background="@color/white"
                        android:gravity="center"
                        android:textColor="@color/level5"
                        android:textSize="@dimen/_14ssp"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>

            <!--Storage Avail-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/thbasic_storage_avail"
                    android:textColor="@color/level5"
                    android:textSize="@dimen/_14ssp"
                    android:textStyle="bold" />
                <!--Gold-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:background="@color/level5"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/_2sdp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/thbasic_storage_gold"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:textSize="@dimen/_12ssp" />

                    <TextView
                        android:id="@+id/thbasic_txt_storage_gold"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/_1sdp"
                        android:layout_weight="1"
                        android:background="@color/white"
                        android:gravity="center"
                        android:textColor="@color/level5"
                        android:textSize="@dimen/_14ssp"
                        android:textStyle="bold" />
                </LinearLayout>
                <!--Elixir-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:background="@color/level5"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:layout_marginBottom="@dimen/_2sdp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/_2sdp"
                        android:textStyle="bold"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/thbasic_storage_elixir"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_12ssp" />

                    <TextView
                        android:id="@+id/thbasic_txt_storage_elixir"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/_1sdp"
                        android:layout_weight="1"
                        android:background="@color/white"
                        android:gravity="center"
                        android:textColor="@color/level5"
                        android:textSize="@dimen/_14ssp"
                        android:textStyle="bold" />
                </LinearLayout>

                <!--Dark Elixir-->
                <LinearLayout
                    android:id="@+id/thdetails_lin_dark"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:background="@color/level5"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/_2sdp"
                        android:layout_weight="1"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:text="@string/thbasic_storage_dark_elixir"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_12ssp" />

                    <TextView
                        android:id="@+id/thbasic_txt_storage_dark_elixir"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/_1sdp"
                        android:layout_weight="1"
                        android:background="@color/white"
                        android:gravity="center"
                        android:textColor="@color/level5"
                        android:textSize="@dimen/_14ssp"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>
            <!--Others-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/thbasic_rel_resourse_builds"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:paddingStart="@dimen/_10sdp"
                    android:paddingEnd="@dimen/_10sdp"
                    android:background="@color/level5">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:layout_centerVertical="true"
                        android:text="@string/thbasic_resourse_builds"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_12ssp" />

                    <ImageView
                        android:layout_width="@dimen/_15sdp"
                        android:layout_height="@dimen/_15sdp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:contentDescription="@null"
                        android:rotation="270"
                        android:src="@drawable/ic_circle" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/thbasic_rel_army_builds"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:paddingStart="@dimen/_10sdp"
                    android:paddingEnd="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_20sdp"
                    android:padding="@dimen/_2sdp"
                    android:background="@color/level5">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/thbasic_army_builds"
                        android:textStyle="bold"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_12ssp" />

                    <ImageView
                        android:layout_width="@dimen/_15sdp"
                        android:layout_height="@dimen/_15sdp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:contentDescription="@null"
                        android:rotation="270"
                        android:src="@drawable/ic_circle" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/thbasic_rel_def_builds"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:padding="@dimen/_2sdp"
                    android:paddingStart="@dimen/_10sdp"
                    android:paddingEnd="@dimen/_10sdp"
                    android:background="@color/level5">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:textAllCaps="true"
                        android:text="@string/thbasic_def_builds"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_12ssp" />

                    <ImageView
                        android:layout_width="@dimen/_15sdp"
                        android:layout_height="@dimen/_15sdp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:contentDescription="@null"
                        android:rotation="270"
                        android:src="@drawable/ic_circle" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/thbasic_rel_traps_builds"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:paddingStart="@dimen/_10sdp"
                    android:paddingEnd="@dimen/_10sdp"
                    android:padding="@dimen/_2sdp"
                    android:background="@color/level5">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:textStyle="bold"
                        android:text="@string/thbasic_def_traps"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_12ssp" />

                    <ImageView
                        android:layout_width="@dimen/_15sdp"
                        android:layout_height="@dimen/_15sdp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:contentDescription="@null"
                        android:rotation="270"
                        android:src="@drawable/ic_circle" />
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>