<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/_5sdp"
    tools:context=".townhall.ThDetailsListActivity">

    <TextView
        android:id="@+id/thdetaillist_txt_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/level5"
        android:gravity="center_horizontal"
        android:padding="@dimen/_10sdp"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="@dimen/_20sdp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/thdetaillist_txt_type"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:textAllCaps="false"
        android:textColor="@color/level5"
        android:textSize="@dimen/_15sdp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:weightSum="5">

        <TextView
            android:id="@+id/txt_col_one"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:background="@color/level5"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="@dimen/_14ssp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@color/level5"
            android:gravity="bottom|center_horizontal"
            android:text="Maximum"
            android:textColor="@color/white"
            android:textSize="@dimen/_14ssp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_25sdp"
        android:layout_marginBottom="@dimen/_2sdp"
        android:background="@color/white"
        android:weightSum="5">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/_1sdp"
            android:layout_weight="3"
            android:background="@color/level5"
            android:gravity="center"
            android:text="@string/thbasic_name"
            android:textColor="@color/white"
            android:textSize="@dimen/_14ssp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_1sdp"
            android:layout_marginEnd="@dimen/_1sdp"
            android:layout_weight="1"
            android:background="@color/level5"
            android:gravity="center"
            android:text="@string/thbasic_no"
            android:textColor="@color/white"
            android:textSize="@dimen/_14ssp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_1sdp"
            android:layout_weight="1"
            android:background="@color/level5"
            android:gravity="center"
            android:text="@string/thbasic_level"
            android:textColor="@color/white"
            android:textSize="@dimen/_14ssp" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/thdetaillist_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>